--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -7,8 +7,59 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"/>
+    <link rel="stylesheet" href="style.css" />
   </head>
+  
   <body>
     <!-- CODE HERE -->
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            <img alt="Brand" class="img-responsive" src="./assets/bootstrap.png" alt="Bootstrap" style="width: 30px;"/>
+          </a>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./page1.html" style="margin-right: 20px;">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./page2.html" style="margin-right: 20px;">Link</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <ul class="list-group">
+      <li class="list-group-item"> Item I</li>
+      <li class="list-group-item"> Item II </li>
+      <li class="list-group-item"> Item III </li>
+      <li class="list-group-item"> Item IV </li>
+      <li class="list-group-item"> Item V </li>
+    </ul>
+
+    <div>
+      <span class="btn btn-primary"> Primary </span>
+      <span class="btn btn-secondary"> Secondary Info </span>
+      <span class="btn btn-success"> Success </span>
+      <span class="btn btn-danger"> Danger </span>
+    </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous" ></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+
   </body>
 </html>
