--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,34 +1,83 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Link and CDN required for bootstrap -->
+<head>
+  <meta charset="utf-8" />
+  <title>Flower Shop BS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
+  <!-- Link and CDN required for bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <!-- Google Font - Lato -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+</head>
 
-  <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+<body>
+  <!--Header (flower shop logo block element)-->
+  <header>
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img src="../Exercise_B/assets/images/logo.png" alt="logo">
+      </a>
+    </nav>
+  </header>
+  <!--Banner Jumbotron of the image-->
+  <Section class="banner">
+    <div class="flowerShop">
+      <div>
+        <h1 class="display-4 heading">Beautiful Flowers</h1>
+      </div>
+      <div class="d-flex">
+        <a class="btn btn-primary btn-lg" id="learn-more" href="#" role="button">Learn more</a>
+      </div>
+    </div>
+  </Section>
+  <!--Four containers with img / text-->
+  <!-- 4 containers -->
+  <Section class="icons">
+    <div class="container">
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+      <div class="row icon-block">
+        <div class="col-12 col-md-3 col-sm-6 icon text-center">
+          <img class="icon" src="../Exercise_B/assets/images/flower-icon.png" alt="flower">
+          <p class="icon-text">Flowers for every <br>kind of situation</p>
+        </div>
+        <!-- Payments Div -->
+        <div class="col-12 col-md-3 col-sm-6 icon text-center">
+          <img class="icon" src="../Exercise_B/assets/images/payment-icon.png" alt="flower">
+          <p class="icon-text">All major payments <br>kinds accepted</p>
+        </div>
+        <!-- Consultation Div -->
+        <div class="col-12 col-md-3 col-sm-6 icon text-center">
+          <img class="icon" src="../Exercise_B/assets/images/phone-icon.png" alt="flower">
+          <p class="icon-text">Free consultation</p>
+        </div>
+        <!-- Delivery Div -->
+        <div class="col-12 col-md-3 col-sm-6 icon text-center">
+          <img class="icon" src="../Exercise_B/assets/images/truck-icon.png" alt="flower">
+          <p class="icon-text">City Wide Delivery</p>
+        </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+      </div>
+    </div>
+  </Section>
+  <!--Scripts required for bootstrap CDN-->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
 
-    <!-- Delivery Div -->
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
 
-    <!--Scripts required for bootstrap CDN-->
-  </body>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+
+</body>
+
 </html>
