--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,12 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -16,19 +21,68 @@
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./assets/style/stylesheet.css" />
   </head>
-
   <body>
     <!--Header (flower shop logo block element)-->
+    <div style="margin-left: 30px">
+      <img src="/Exercise_B/assets/images/logo.png" alt="" />
+    </div>
     <!--Banner Jumbotron of the image-->
-
+    <div class="jumbotron banner">
+      <h1 class="heading">Beautiful Flowers</h1>
+    </div>
+    <div style="height: 0px">
+      <a class="btn btn-primary" id="learn-more" href="#" role="button"
+        >Learn more</a
+      >
+    </div>
     <!--Four containers with img / text-->
     <!-- 4 containers -->
+    <div class="container-fluid icons">
+      <div class="row text-center">
+        <div class="col-md-3 col-sm-6 pt-3">
+          <img
+            class="icon"
+            src="/Exercise_B/assets/images/flower-icon.png"
+            alt=""
+          />
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
+          <div class="icon-text">Flower for every <br />kind of situation</div>
+        </div>
+        <!-- Payments Div -->
+        <div class="col-md-3 col-sm-6 pt-3">
+          <img class="icon" src="/Exercise_B/assets/images/payment-icon.png" />
+          <div class="icon-text text-center">
+            All major payments <br />kinds accepted
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6 pt-3">
+          <img class="icon" src="/Exercise_B/assets/images/phone-icon.png" />
+          <!-- Consultation Div -->
+          <div class="icon-text">Free consultation</div>
+        </div>
+        <!-- Delivery Div -->
+        <div class="col-md-3 col-sm-6 pt-3">
+          <img class="icon" src="/Exercise_B/assets/images/truck-icon.png" />
+          <div class="icon-text">City wide delivery</div>
+        </div>
+      </div>
+    </div>
 
     <!--Scripts required for bootstrap CDN-->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
