--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,16 +19,62 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="/assets/images/logo.png"></a>
+      </div>
+    </nav>
 
+    <!--Banner Jumbotron of the image-->
+<div class="jumbotron banner">
+  <div class="container-fluid text-center">
+  <h1 class="display-4 text-light">Beautiful Flower</h1>
+  <button type="button" class="btn " id="learn-more">Learn More</button>
+  </div>
+</div>
     <!--Four containers with img / text-->
+
+    <div class="container-fluid icons text-center">
+      <div class="row">
+        <div class="icon-block col-lg-3 col-md-6 row">     
+            <img class="icon col" src="/assets/images/flower-icon.png">
+            <p class="icon-text col">Flowers for every kind of situation</p>
+        </div>
+
+
+         <!-- Payments Div -->
+
+
+        <div class="icon-block col-lg-3 col-md-6 row">     
+            <img class="icon col" src="/assets/images/payment-icon.png">
+            <p class="icon-text col">All major payments kinds accepted</p>
+        </div>
+
+        <!-- Consultation Div -->
+
+        <div class="icon-block col-lg-3 col-md-6 row">     
+             <img class="icon col" src="/assets/images/phone-icon.png">
+             <p class="icon-text col">Free consulation</p>
+         </div>
+
+         <!-- Delivery Div -->
+
+
+         <div class="icon-block col-lg-3 col-md-6 row">     
+            <img class="icon col" src="/assets/images/truck-icon.png">
+            <p class="icon-text col">City wide delivery</p>
+        </div>
+      </div>
+    </div>
     <!-- 4 containers -->
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
 
-    <!-- Delivery Div -->
+  
+   
+
+    
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
 </html>
