--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,28 +7,61 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
     />
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+    <link rel="stylesheet" href="assets/style/stylesheet.css">
   </head>
 
   <body>
     <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+    <header>
+      <img src="assets/images/logo.png" alt="">
+    </header>
 
+    <div class='test'></div>
+    <!--Banner Jumbotron of the image-->
+      <div class="jumbotron banner">
+        <div class="container-fluid text-center">
+        <h2 class="heading">Beautiful Flowers</h2>
+        <button type="button" id="learn-more">Learn more</button></div>
+      </div>
+    </div>
     <!--Four containers with img / text-->
     <!-- 4 containers -->
-
+    <div class="container-fluid icons">
+      <div class="row">
+        <div class="icon-block col-md-3 col-sm-6 col-12">
+          <img class="icon col-md-6 col-sm-4 col" src="assets/images/flower-icon.png" alt="">
+          <div class="icon-text col-md-6 col-sm-8 col">Flowers for every kind of situation</div>
+        </div>
+        <div class="icon-block col-md-3 col-sm-6 col-12">
+          <img class="icon col-md-6 col-sm-4 col-12" src="assets/images/payment-icon.png" alt="">
+          <p class="icon-text col-md-6 col-sm-8">All major payments kinds accepted</p>
+        </div>
+        <div class="icon-block col-md-3 col-sm-6 col-12">
+          <img class="icon col-md-6 col-sm-4" src="assets/images/phone-icon.png" alt="">
+          <p class="icon-text col-md-6 col-sm-8">Free consultation</p>
+        </div>
+        <div class="icon-block col-md-3 col-sm-6 col-12">
+          <img class="icon col-md-6 col-sm-4" src="assets/images/truck-icon.png" alt="">
+          <p class="icon-text col-md-6 col-sm-8">City wide delivery</p>
+        </div>
+      </div>
+    </div>
+    
     <!-- Payments Div -->
     <!-- Consultation Div -->
 
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
