--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,11 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+    crossorigin="anonymous"/>
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,16 +23,64 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+          <img id="logo" src="./assets/images/logo.png" alt="">
+        </a>
+    </nav>
+
     <!--Banner Jumbotron of the image-->
+    <div class="banner">
+    <div class="container-fluid text-center">
+    <h1 class ="heading text light">Beautiful Flowers</h1>
+    <button type ="submit" class="btn btn-success" id="learn-more">Learn more
+    </button>
+    </div>
+    </div>
+>
 
     <!--Four containers with img / text-->
-    <!-- 4 containers -->
+    <div class="container-fluid icons text-center">
+      <div class="row">
+        <div class="icon-block col-lg-3 col-md-6 row">
+          <img class="icon col" src="./assets/images/flower-icon.png">
+            <p class="icon-text col h3">Flowers for every kind of situation</p>
+        </div>
+        <div class="icon-block col-lg-3 col-md-6 row">
+          <img class="icon col" src="./assets/images/payment-icon.png">
+            <p class="icon-text col h3">All majory payments kinds accepted</p>
+        </div>
+        <div class="icon-block col-lg-3 col-md-6 row">
+          <img class="icon col" src="./assets/images/phone-icon.png">
+            <p class="icon-text col h3">Free consultation</p>
+        </div>
+        <div class="icon-block col-lg-3 col-md-6 row">
+          <img class="icon col" src="./assets/images/truck-icon.png">
+            <p class="icon-text col h3">City wide delivery</p>
+        </div>
 
+    <!-- 4 containers -->
+        
     <!-- Payments Div -->
     <!-- Consultation Div -->
 
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
