--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,6 +7,30 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Google Font - Lato -->
     <link
@@ -19,16 +43,47 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <img src="assets/images/logo.png" alt="logo">
     <!--Banner Jumbotron of the image-->
+      <div class="banner">
+        <div class="overlay">
+
+        </div>
+
+      </div>
 
     <!--Four containers with img / text-->
+    <div class="icons container-fluid">
+      <div class="row">
+    
     <!-- 4 containers -->
+    <div class="icon-block col-lg-3 col-md-6 col-sm-12">
+      <img src="assets/images/flower-icon.png" alt="flower icon">
+      <div class="icon-text"><p>Flowers for every kind of situation </p>
+    </div>
+    </div>
 
     <!-- Payments Div -->
+    <div class="icon-block col-lg-3 col-md-6 col-sm-12">
+      <img src="assets/images/payment-icon.png" alt="payment icon">
+      <div class="icon-text"><p>All major payment kinds accepted </p>
+      </div>
+      </div>
     <!-- Consultation Div -->
+    <div class="icon-block col-lg-3 col-md-6 col-sm-12">
+      <img src="assets/images/phone-icon.png" alt="phone icon">
+      <div class="icon-text"><p>Free consultation </p>
+    </div>
+    </div>
 
     <!-- Delivery Div -->
-
+    <div class="icon-block col-lg-3 col-md-6 col-sm-12">
+      <img src="assets/images/truck-icon.png" alt="truc icon">
+      <div class="icon-text"><p>City Wide delivery </p>
+    </div>
+    </div>
+    </div>
+    </div>
     <!--Scripts required for bootstrap CDN-->
   </body>
 </html>
