--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,23 +7,58 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"crossorigin="anonymous"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+    <link rel="stylesheet" href="./assets/style/newcss.css" />
   </head>
 
   <body>
     <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+    <div class="header">
+      <img src="./assets/images/logo.png">
+    </div>
 
+    <!--Banner Jumbotron of the image-->
+    <div class="cover">
+      <img src="./assets/images/flowershop.jpg">  
+    </div>
+    <div class ="back">
+      <div> 
+        <h3>Beautiful Flowers</h3>
+      </div>
+      <div>
+        <button type="button" class="btn btn-success">Learn More</button>
+      </div>
+    </div>
     <!--Four containers with img / text-->
     <!-- 4 containers -->
-
+    <div class="Bigbox">
+      <div class="box">
+        <img src="./assets/images/flower-icon.png">
+        <p>Flowers for every kind of situation</p>
+      </div>
+      <div class="box">
+        <img src="./assets/images/payment-icon.png">
+        <p>All major payments kinds accepted</p>
+      </div>
+      <div class="box">
+        <img src="./assets/images/phone-icon.png">
+        <p>Free consulation</p>
+      </div>
+      <div class="box">
+        <img src="./assets/images/truck-icon.png">
+        <p>City wide delivery</p>
+      </div>
+    </div>
+      
+  
     <!-- Payments Div -->
     <!-- Consultation Div -->
 
